start css lightbox changes and small fixes. Current state: css light box is not working.

--- a/_projects/project-04.html
+++ b/_projects/project-04.html
@@ -1,11 +1,17 @@
 ---
-title: portrait | Kobi
+title: portrait
 name: projectfour
 category: photography
 size: onethird
 ---
 
+
+<p>These photos are a collection of images taken for the Melbourne Fashionista and successful blogger, Kobi Jae.</p>
+<p>See more at Horror Kitsch Bitch</p>
+
+
+<!--
 <p>These photos are a collection of images taken for the Melbourne Fashionista and successful blogger, Kobi Jae.</p>
 
 <p>See more of my shots at
-<a href="www.horrorkitschbitch.com">Horror Kitsch Bitch</a></p>
+<a href="www.horrorkitschbitch.com">Horror Kitsch Bitch</a></p> -->
