--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: default
         <nav>
           <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="index.html">projects</a></li>
+            <li><a href="index.html#filternav">projects</a></li>
             <li><a href="about.html">about</a></li>
           </ul>
         </nav>
